force-app/main/default/objects/IFv2_Section__mdt/IFv2_Section__mdt.object-meta.xml
<CustomObject>
    <description>To store different sections to be displayed on the request detail page and workflow detail page in InsightFlow application version 2.0</description>
    <label>Section</label>
    <pluralLabel>Section</pluralLabel>
</CustomObject>