force-app/main/default/objects/IFv2_Section__mdt/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To display the Workflow fields based on the user profile</description>
    <inlineHelpText>Please check if the section is to be displayed only to the Admin</inlineHelpText>
    <label>Admin</label>
    <type>Checkbox</type>
</CustomField>