force-app/main/default/objects/IFv2_Section__mdt/fields/ApproverRelatedFields__c.field-meta.xml
<CustomField>
    <fullName>ApproverRelatedFields__c</fullName>
    <label>ApproverHistoryFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>