force-app/main/default/objects/IFv2_Section__mdt/fields/EditRoles__c.field-meta.xml
<CustomField>
    <fullName>EditRoles__c</fullName>
    <label>Roles that can edit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>