force-app/main/default/objects/IFv2_Section__mdt/fields/ExtendedRelatedListColumnApis__c.field-meta.xml
<CustomField>
    <fullName>ExtendedRelatedListColumnApis__c</fullName>
    <description>The column api names for the full view of the related list</description>
    <inlineHelpText>Enter the api names of the columns to display for the extended view of the related list.</inlineHelpText>
    <label>Extended Related List Column Apis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>