force-app/main/default/objects/IFv2_Section__mdt/fields/ExtendedRelatedListColumnLabels__c.field-meta.xml
<CustomField>
    <fullName>ExtendedRelatedListColumnLabels__c</fullName>
    <description>The column labels for display of the complete related list</description>
    <inlineHelpText>Enter the column labels for the full view of the related list(comma separated)</inlineHelpText>
    <label>Extended Related List Column Labels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>