force-app/main/default/objects/IFv2_Section__mdt/fields/ExtendedValue__c.field-meta.xml
<CustomField>
    <fullName>ExtendedValue__c</fullName>
    <description>Used to provide the field set name or set of fields to be displayed in request detail page or workflow detail page.</description>
    <inlineHelpText>Please enter the API names of the fields to be displayed. &apos;Has Extended Value&apos; should be checked.</inlineHelpText>
    <label>Extended Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>