force-app/main/default/objects/IFv2_Section__mdt/fields/HasExtendedValue__c.field-meta.xml
<CustomField>
    <fullName>HasExtendedValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the characters stored in Value exceeds 255, store the value in Extended Value field.</description>
    <inlineHelpText>If the characters stored in Value exceeds 255, store the value in the Extended Value field.</inlineHelpText>
    <label>Has Extended Value</label>
    <type>Checkbox</type>
</CustomField>