force-app/main/default/objects/IFv2_Section__mdt/fields/isApproverEditable__c.field-meta.xml
<CustomField>
    <fullName>isApproverEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Editable by approvers</label>
    <type>Checkbox</type>
</CustomField>