force-app/main/default/objects/IFv2_Section__mdt/fields/IsApproverOnly__c.field-meta.xml
<CustomField>
    <fullName>IsApproverOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check the checkbox if the section is to be displayed only to the Approvers</inlineHelpText>
    <label>Approver Only</label>
    <type>Checkbox</type>
</CustomField>