force-app/main/default/objects/IFv2_Section__mdt/fields/isApproverSection__c.field-meta.xml
<CustomField>
    <fullName>isApproverSection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the section is of Approvers</description>
    <inlineHelpText>Check if the section has Approvers in it</inlineHelpText>
    <label>Approver Section</label>
    <type>Checkbox</type>
</CustomField>