force-app/main/default/objects/IFv2_Section__mdt/fields/isCollapsible__c.field-meta.xml
<CustomField>
    <fullName>isCollapsible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To display the Collapsible panel</description>
    <label>isCollapsible</label>
    <type>Checkbox</type>
</CustomField>