force-app/main/default/objects/IFv2_Section__mdt/fields/isFormulaSection__c.field-meta.xml
<CustomField>
    <fullName>isFormulaSection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formula Section</label>
    <type>Checkbox</type>
</CustomField>