force-app/main/default/objects/IFv2_Section__mdt/fields/isParallelApproverSection__c.field-meta.xml
<CustomField>
    <fullName>isParallelApproverSection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the section contains parallel approver fields.</description>
    <inlineHelpText>Check if the section has parallel approver fields.</inlineHelpText>
    <label>Parallel Approver Section</label>
    <type>Checkbox</type>
</CustomField>