force-app/main/default/objects/IFv2_Section__mdt/fields/isPredefinedApproverSection__c.field-meta.xml
<CustomField>
    <fullName>isPredefinedApproverSection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the section is for Predefined Approvers</description>
    <inlineHelpText>Please check the checkbox if the section is for Predefined Approvers</inlineHelpText>
    <label>Predefined Approver Section</label>
    <type>Checkbox</type>
</CustomField>