force-app/main/default/objects/IFv2_Section__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Describes the name of the Section.</description>
    <inlineHelpText>Please enter the Name of the section to be displayed on the layout</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>