force-app/main/default/objects/IFv2_Section__mdt/fields/ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check to make the section read only</inlineHelpText>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>