force-app/main/default/objects/IFv2_Section__mdt/fields/RelatedListColumnApis__c.field-meta.xml
<CustomField>
    <fullName>RelatedListColumnApis__c</fullName>
    <description>Related list column api names</description>
    <inlineHelpText>Enter the related list column apis here (comma separated)</inlineHelpText>
    <label>Related List Column Apis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>