force-app/main/default/objects/IFv2_Section__mdt/fields/RelatedListColumnLabels__c.field-meta.xml
<CustomField>
    <fullName>RelatedListColumnLabels__c</fullName>
    <label>Related List Column Labels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>