force-app/main/default/objects/IFv2_Section__mdt/fields/RelatedListType__c.field-meta.xml
<CustomField>
    <fullName>RelatedListType__c</fullName>
    <description>This picklist is used to store the type of Related list this record belongs to</description>
    <label>Related List Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Time Data Amendment</fullName>
            </value>
            <value>
                <fullName>OT Application Details</fullName>
            </value>
            <value>
                <fullName>Leave Cancellation</fullName>
            </value>
            <value>
                <fullName>Leave Details</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>China MAE Combine</fullName>
            </value>
            <value>
                <fullName>China MAE Scrap</fullName>
            </value>
            <value>
                <fullName>China MAE Lost</fullName>
            </value>
            <value>
                <fullName>China MAE Transfer</fullName>
            </value>
            <value>
                <fullName>China MAE Before Split</fullName>
            </value>
            <value>
                <fullName>China MAE After Split</fullName>
            </value>
            <value>
                <fullName>Approval History</fullName>
            </value>
            <value>
                <fullName>LEX Contracting</fullName>
            </value>
            <value>
                <fullName>Sample ContentType Relatedlist_R</fullName>
            </value>
            <value>
                <fullName>Containment action</fullName>
                <isActive>false</isActive>
                <label>Containment action</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>