force-app/main/default/objects/IFv2_Section__mdt/fields/SectionNumber__c.field-meta.xml
<CustomField>
    <fullName>SectionNumber__c</fullName>
    <description>Used to provide order number for displaying the section in request detail page.</description>
    <inlineHelpText>Please enter the position of the section</inlineHelpText>
    <label>Section Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>