force-app/main/default/objects/IFv2_Section__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Describes whether the section is for Workflow details page or Request details page or Related list.</description>
    <inlineHelpText>Workflow details - For Workflow Detail section
Request details - For Request Detail section
Related lists - For Related List section</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workflow details</fullName>
                <default>true</default>
                <label>Workflow details</label>
            </value>
            <value>
                <fullName>Request details</fullName>
            </value>
            <value>
                <fullName>Related list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>