force-app/main/default/objects/IFv2_Section__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Used to provide the field set name in in request detail page or set of fields to be displayed in workflow detail page.</description>
    <inlineHelpText>Workflow details - Enter field API names
Request details - Enter the fieldset API name
Related lists - Enter the fieldset API name
To enter the API names of the fields to be displayed. If API names exceeds 255 characters enter custom label name.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>