force-app/main/default/objects/IFv2_Section__mdt/fields/Workflows__c.field-meta.xml
<CustomField>
    <fullName>Workflows__c</fullName>
    <description>Describes to which workflow record this section belongs to.</description>
    <inlineHelpText>Please select the workflow to which the section is related to</inlineHelpText>
    <label>Workflows</label>
    <referenceTo>IFv2_Workflows__mdt</referenceTo>
    <relationshipLabel>Section</relationshipLabel>
    <relationshipName>Section</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>