force-app/main/default/objects/IFv2_Section__mdt/listViews/AllSections.listView-meta.xml
<ListView>
    <fullName>AllSections</fullName>
    <columns>MasterLabel</columns>
    <columns>Name__c</columns>
    <columns>SectionNumber__c</columns>
    <columns>Type__c</columns>
    <columns>Workflows__c</columns>
    <columns>Value__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Workflows__c</field>
        <operation>contains</operation>
        <value>ICO</value>
    </filters>
    <label>All Sections</label>
    <language>en_US</language>
</ListView>